# taskFlow

./: .env.example  .gitignore  AI_BOT_FIX_PLAN.md  AI_BOT_IMPLEMENTATION.md  CHITCHAT_IMPLEMENTATION_PLAN.md  CLAUDE.md  DATABASE_WORKFLOW.md  FEATURES_MIGRATION_PLAN.md  NATIVE_APPS_PLAN.md  TASK_SYSTEM_ARCHITECTURE_REVIEW.md  UX_IMPLEMENTATION_PLAN.md  VOICE_VIDEO_ARCHITECTURE.md  WORK_FOLDER_SYNC.md  db_suggestions.md  future-fixes.md  implementation.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  push-notification-review.md  turbo.json
.github/workflows/: desktop-release.yml
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/chat/: page.tsx
app/chitchat/: page.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/nsis/: main.nsh
apps/desktop/src-tauri/src/: lib.rs  main.rs  work_folder.rs
components/: error-boundary.tsx  realtime-health-monitor.tsx
hooks/: index.ts  use-ai-bot-session.ts  use-async.ts  use-audio-recorder.ts  use-back-navigation.ts  use-chat-messages.ts  use-conversations.ts  use-dialog.ts  use-media-query.ts  use-messages.ts  use-mobile.ts  use-notes.ts  use-online-presence.ts  use-reactions.ts  use-task-messages.ts  use-tasks.ts  use-updating-timestamp.ts  use-users.ts
lib/: auth-context.tsx  constants.ts  database.types.ts  env.ts  global-clock.ts  haptics.ts  realtime-manager.ts  types.ts
public/: sw.js
scripts/: release-desktop.mjs
supabase/: CREATE_STORAGE_BUCKET.sql  config.toml
(+342 files in other folders)
