[package]
name = "taskflow-desktop"
version = "0.1.0"
description = "TaskFlow Desktop App"
authors = ["TaskFlow"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
open = "5"
argon2 = "0.5"

# Windows: Rich notifications with circular avatars and image previews
[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
reqwest = { version = "0.12", features = ["blocking"] }

